--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -2,11 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
 /* style reset */
 
 body {
   font-size: 16px;
   overflow-x: hidden;
+  background: #f4f4f8;
 }
 
 h1,
@@ -30,17 +32,17 @@ span {
 
 @layer base {
   :root {
-    --main-page: #F4F4F8;
-    --white: #FFF;
+    --main-page: #f4f4f8;
+    --white: #fff;
     --dark: #182233;
-    --second-color: #FF7272;
-    --extra: #5AC5BF;
+    --second-color: #ff7272;
+    --extra: #5ac5bf;
     --main-text: #182233;
+    --main-text-half: rgba(24, 34, 51, 0.65);
     --second-text: rgba(24, 34, 51, 0.65);
     --third-text: rgba(24, 34, 51, 0.65);
-    --bold-text: #1D1D33;
+    --bold-text: #1d1d33;
     --text-white-pass: rgba(255, 255, 255, 0.65);
-    --primary-color: #4a5568; /* Slate Gray */
-
+    --primary-color: #4a5568; /* deleate? */
   }
 }
