--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -36,6 +36,8 @@ span {
     --white: #fff;
     --dark: #182233;
     --second-color: #ff7272;
+    --second-colorHr: #ed5858;
+    --second-colorHrBright: #d46262;
     --extra: #5ac5bf;
     --main-text: #182233;
     --main-text-half: rgba(24, 34, 51, 0.65);
