--- a/src/components/socialLink/style.module.css
+++ b/src/components/socialLink/style.module.css
@@ -3,6 +3,72 @@
   align-items: center;
   justify-content: center;
   padding: 0.5em;
-  border: 1px solid #DEE3EC;
+  background-color: #fff;
+  border: 1px solid rgba(90, 197, 192, 0.3);
   border-radius: 10px;
+  gap: 0.5em; /* Использование gap для управления расстоянием между элементами */
+  color: var(--main-text);
+  transition:
+    background-color 0.3s ease,
+    border-color 0.3s ease,
+    color 0.3s ease;
+  cursor: pointer;
 }
+.HeaderSocialItem > p {
+  font-size: 1em;
+  cursor: pointer;
+  font-weight: 500;
+}
+
+.HeaderSocialItem svg {
+  width: 24px;
+  height: 24px;
+}
+
+.Icon,
+.Text {
+  color: var(--social-icons);
+}
+
+.HeaderSocialItem:hover .Icon,
+.HeaderSocialItem:hover .Text {
+  color: #5ac5bf;
+}
+
+.HeaderSocialItem:hover {
+  background-color: rgba(90, 197, 192, 0.2);
+  border-color: rgba(90, 197, 192, 0.7);
+  color: rgba(90, 197, 192, 1);
+}
+
+/* .HeaderSocialItem:hover {
+  background-color: rgba(240, 240, 240, 1);
+  border-color: rgba(90, 197, 192, 0.5);
+  color: var(--main-text);
+} */
+
+/* .HeaderSocialItem:hover {
+  background-color: rgba(90, 197, 192, 0.1);
+  border-color: rgba(90, 197, 192, 0.5);
+  color: rgba(90, 197, 192, 1);
+} */
+
+/* 
+.HeaderSocialItem {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5em;
+  background-color: #fff;
+  border: 1px solid rgba(90, 197, 192, 0.30);
+  border-radius: 10px;
+  gap: 0.5em;
+  color: var(--main-text);
+  transition: background-color 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.HeaderSocialItem:hover {
+  background-color: rgba(90, 197, 192, 0.15);
+  border-color: rgba(90, 197, 192, 0.5);
+  box-shadow: 0 2px 4px rgba(90, 197, 192, 0.2);
+} */
